lbdb (0.13) unstable; urgency=low

  * Upgraded lbdb.sl supplied by Thomas Roessler <roessler@guug.de>
  * Moved lbdb.sl to /usr/doc/lbdb/examples
  * Removed dependency to mutt-i (>= 0.94.10), because there was no mutt-i 
    >= 0.94.10, instead mutt-i was renamed to mutt in the time of adding
    the needed mutt_dotlock.

 -- Roland Rosenfeld <roland@debian.org>  Tue, 24 Nov 1998 23:38:33 +0100

lbdb (0.12) unstable; urgency=low

  * Debian maintainer took over the maintenance of the upstream packet.
  * lbdbq manpage moved to main packet.
  * made @libdir@ configurable in lbdbq manpage.
  * fixed some "-Wall" warnings.
  * several typos and nits fixed.

 -- Roland Rosenfeld <roland@debian.org>  Wed, 11 Nov 1998 21:30:33 +0100

lbdb (0.11-3) unstable; urgency=low

  * Fixed /tmp security problem (mkdir -p returns 0 on existing dir)

 -- Roland Rosenfeld <roland@debian.org>  Mon, 26 Oct 1998 17:33:25 +0100

lbdb (0.11-2) unstable; urgency=low

  * Fixed nits in manpage.
  * Changed date format in fetchaddr.c to yy-mm-dd HH:MM.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 25 Oct 1998 12:51:54 +0100

lbdb (0.11-1) unstable; urgency=low

  * New upstream version.
  * jed mode lbdb.sl installed.

 -- Roland Rosenfeld <roland@debian.org>  Wed, 14 Oct 1998 17:46:25 +0200

lbdb (0.10-1) unstable; urgency=low

  * Initial Release.
  * Manpage added.
  * m_inmail database renamed.

 -- Roland Rosenfeld <roland@debian.org>  Mon, 12 Oct 1998 01:31:38 +0200